task1-v2 without responsive

--- a/index.html
+++ b/index.html
@@ -5,59 +5,270 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task 1</title>
+    <title>Task-1-v2</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>TASK 1</header>
-    <div class="main">THE MOTOR SHOW
-        <div id="container">
-            <div class="scrol-area">
-                <div class="scrolling">
-                    <h1>CARS</h1>
-                    <div class="item">
-                        <img src="https://source.unsplace.com/bikes">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus animi eius sint!</p>
-                    </div>
-                    <div class="item">
-                        <img src="https://source.unsplace.com/forest">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, qui.</p>
-                    </div>
-                    <div class="item">
-                        <img src="https://source.unsplace.com/food">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, qui!</p>
-                    </div>
-                    <div class="item">
-                        <img src="https://source.unsplace.com/beach">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, minima?</p>
-                    </div>
+    <header>Task-1-v2 weekend play</header>
+    <div class="main">
+        <div class="course-title">FRONTEND</div>
+        <div class="parent-slider">
+            <div class="chapter">
+                <div class="paragraph">
+                    <h1>
+                        HTML Introduction
+                    </h1>
+                    <p>
+                        HTML stands for HyperText Markup Language. It is used to design web pages using a markup
+                        language. HTML is the combination of Hypertext and Markup language. Hypertext defines the link
+                        between web pages. A markup language is used to define the text document within the tag which
+                        defines the structure of web pages. This language is used to annotate (make notes for the
+                        computer) text so that a machine can understand it and manipulate text accordingly. Most markup
+                        languages (e.g. HTML) are human-readable. The language uses tags to define what manipulation has
+                        to be done on the text.
+                    </p>
+                </div>
+                <div class="paragraph">
+                    <h1>
+                        Elements and Tags
+                    </h1>
+                    <p>
+                        HTML uses predefined tags and elements which tell the browser how to properly display the
+                        content. Remember to include closing tags. If omitted, the browser applies the effect of the
+                        opening tag until the end of the page.
+                    </p>
+
+                </div>
+                <div class="paragraph">
+                    <h1>
+                        HTML page structure
+                    </h1>
+                    <p>
+                        The basic structure of an HTML page is laid out below. It contains the essential building-block
+                        elements (i.e. doctype declaration, HTML, head, title, and body elements) upon which all web
+                        pages are created.
+                    </p>
+
+                </div>
+                <div class="paragraph">
+                    <h1>
+                        Advantages
+                    </h1>
+                    <p>
+                        HTML is used to build websites.
+                        It is supported by all browsers.
+                        It can be integrated with other languages like CSS, JavaScript, etc.
+                    </p>
+                    <h2>
+                        Disadvantages
+                    </h2>
+                    <p>
+                        HTML can only create static web pages. For dynamic web pages, other languages have to be used.
+                        A large amount of code has to be written to create a simple web page.
+                        The security feature is not good.
+                    </p>
+
                 </div>
             </div>
-
-
-            <div class="scrol-area">
-                <div class="scrolling">
-                    <h1>BIKES</h1>
-                    <div class="item">
-                        <img src="https://source.unsplace.com/fun">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus animi eius sint!</p>
-                    </div>
-                    <div class="item">
-                        <img src="https://source.unsplace.com/festival">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, qui.</p>
-                    </div>
-                    <div class="item">
-                        <img src="https://source.unsplace.com/anime">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, qui!</p>
-                    </div>
-                    <div class="item">
-                        <img src="https://source.unsplace.com/art">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, minima?</p>
-                    </div>
+            <div class="chapter">
+                <div class="paragraph">
+                    <h1>
+                        CSS Introduction
+                    </h1>
+                    <p>
+                        CSS (Cascading Style Sheets)is used to apply styles to web pages. Cascading Style Sheets are
+                        fondly referred to as CSS. It is used to make web pages presentable. The reason for using this
+                        is to simplify the process of making web pages presentable. It allows you to apply styles on web
+                        pages. More importantly, it enables you to do this independently of the HTML that makes up each
+                        web page.
+                    </p>
+                </div>
+                <div class="paragraph">
+                    <h1>
+                        Why we learn CSS?
+                    </h1>
+                    <p>
+                        Styling is an essential property for any website. It increases the standards and overall look of
+                        the website that makes it easier for the user to interact with it. A website can be made without
+                        CSS, as styling is MUST since no user would want to interact with a dull and shabby website. So
+                        for knowing Web Development, learning CSS is mandatory.
+                    </p>
+                </div>
+                <div class="paragraph">
+                    <h1>
+                        What does CSS mean?
+                    </h1>
+                    <p>
+                        Tags for formatting a web page were never intended in HTML. HTML was established to define a web
+                        pages content. The addition of tags like and color attributes to HTML created a big problem for
+                        web developers. The creation of large websites, where fonts and color information were added to
+                        each page, became a time-consuming and costly procedure. CSS was established to address this
+                        issue. CSS eliminated the HTML pages style formatting.
+                    </p>
+                </div>
+                <div class="paragraph">
+                    <h1>
+                        How CSS is different from HTML?
+                    </h1>
+                    <p>
+                        HTML is used to define a structure of a web page whereas CSS is used to style the web pages by
+                        using different styling features.
+                        HTML consists of tags inside which text is enclosed and CSS consists of selectors and
+                        declaration blocks.
+                        CSS can be internal or external depending upon the requirement.
+                        We cannot use HTML inside a CSS sheet but we can use CSS inside an HTML document.
+                        CSS has comparatively higher backup and support than HTML.
+                    </p>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="main">
+        <div class="course-title">BACKEND</div>
+        <div class="parent-slider">
+            <div class="chapter">
+                <div class="paragraph">
+                    <h1>
+                        Node.js Introduction
+                    </h1>
+                    <h2>What is Node.js?</h2>
+                    <p>
+
+                        Node.js is an open source server environment
+                        Node.js is free
+                        Node.js runs on various platforms (Windows, Linux, Unix, Mac OS X, etc.)
+                        Node.js uses JavaScript on the server
+
+                    </p>
+                </div>
+                <div class="paragraph">
+                    <h1>
+                        What Can Node.js Do?
+                    </h1>
+                    <p>
+
+                        Node.js can generate dynamic page content
+                        Node.js can create, open, read, write, delete, and close files on the server
+                        Node.js can collect form data
+                        Node.js can add, delete, modify data in your database
+
+                    </p>
+
+                </div>
+                <div class="paragraph">
+                    <h1>
+                        Why Node.js?
+                    </h1>
+                    <p>
+                        A common task for a web server can be to open a file on the server and return the content to the
+                        client.
+
+                        Here is how PHP or ASP handles a file request:
+
+                        Sends the task to the computer's file system.
+                        Waits while the file system opens and reads the file.
+                        Returns the content to the client.
+                        Ready to handle the next request.
+                    </p>
+
+                </div>
+                <div class="paragraph">
+                    <h1>
+                        What is a Node.js File?
+                    </h1>
+                    <p>
+
+                        Node.js files contain tasks that will be executed on certain events
+                        A typical event is someone trying to access a port on the server
+                        Node.js files must be initiated on the server before having any effect
+                        Node.js files have extension ".js"
+                    </p>
+                </div>
+            </div>
+            <div class="chapter">
+                <div class="paragraph">
+                    <h1>
+                        Introduction to MongoDB
+                    </h1>
+                    <h2>document-database</h2>
+                    <p>
+                        A record in MongoDB is a document, which is a data structure composed of field and value pairs.
+                        MongoDB documents are similar to JSON objects. The values of fields may include other documents,
+                        arrays, and arrays of documents.
+                    </p>
+                </div>
+                <div class="paragraph">
+                    <h1>
+                        Key Features
+                    </h1>
+                    <h2>High Performance
+                </div>h2>
+                <p>
+                    MongoDB provides high performance data persistence. In particular,
+
+                    Support for embedded data models reduces I/O activity on database system.
+
+                    Indexes support faster queries and can include keys from embedded documents and arrays.
+                </p>
+                <h2>Query API</h2>
+                <p>
+                    The MongoDB Query API supports read and write operations (CRUD) as well as:
+
+                    Data Aggregation
+
+                    Text Search and Geospatial Queries.
+                </p>
+                <h2>High Availability</h2>
+                <p>
+                    MongoDB's replication facility, called replica set, provides:
+
+                    automatic failover
+
+                    data redundancy.
+                    A replica set is a group of MongoDB servers that maintain the same data set, providing redundancy
+                    and increasing data availability.
+                </p>
+                <h2>Horizontal Scalability</h2>
+                <p>
+                    MongoDB provides horizontal scalability as part of its core functionality:
+
+                    Sharding distributes data across a cluster of machines.
+
+                    Starting in 3.4, MongoDB supports creating zones of data based on the shard key. In a balanced
+                    cluster, MongoDB directs reads and writes covered by a zone only to those shards inside the zone.
+                    See the Zones manual page for more information.
+                </p>
+            </div>
+            <div class="paragraph">
+                <h1>
+                    Getting Started
+                </h1>
+                <p>
+                    This tutorial walks you through inserting test data into a MongoDB database and querying that data
+                    using the documentation's embedded web shell. You do not need to deploy or install MongoDB to
+                    complete this tutorial.
+
+                    The examples in this tutorial use a subset of the Sample Mflix Dataset, which is part of the sample
+                    data included in MongoDB's cloud-hosted service, MongoDB Atlas. Atlas requires no installation
+                    overhead and offers a free tier to get started. After completing this tutorial, you can use Atlas to
+                    explore additional sample data or host your own data.
+                </p>
+            </div>
+            <div class="paragraph">
+                <h1>
+                    Get Started with Atlas
+                </h1>
+                <p>
+                    MongoDB Atlas provides an easy way to host and manage your data in the cloud. This tutorial guides
+                    you through creating an Atlas cluster, connecting to it, and loading sample data.
+
+                    You can get started with Atlas through the Atlas CLI or the Atlas User Interface. Select a tab based
+                    on how you would like to get started:
+                </p>
+            </div>
+        </div>
+    </div>
     </div>
     <footer>SID</footer>
 </body>
